--- a/post/2023/javascript_core.mdx
+++ b/post/2023/javascript_core.mdx
@@ -3,7 +3,7 @@ title: "자바스크립트 핵심개념"
 summary: "this 공부하다가 정리해본 자바스크립트 핵심개념"
 date: "2023-11-24"
 tag: "javascript"
-thumbnail: "/img/post/2023/javascript_core/js_core_thumbnail.jpg"
+keywords: ["this", "scope", "context"]
 ---
 
 <MainCate>
@@ -60,8 +60,6 @@ thumbnail: "/img/post/2023/javascript_core/js_core_thumbnail.jpg"
     </SubCate>
 
 </MainCate>
-
----
 
 <MainCate>
 
@@ -240,8 +238,6 @@ thumbnail: "/img/post/2023/javascript_core/js_core_thumbnail.jpg"
     </SubCate>
 
 </MainCate>
-
----
 
 <MainCate>
 
