--- a/post/2023/javascript_core.mdx
+++ b/post/2023/javascript_core.mdx
@@ -277,7 +277,7 @@ keywords: ["this", "scope", "context", "hoisting", "closure"]
 <MainCate tag="js">
 
     <div className="main_category_box">
-        ## <TextSizeDown></TextSizeDown>
+        ## <TextSizeDown>HOISTING</TextSizeDown>
 
         <MarginBox lang="en">
             인터프리터가 코드를 실행하기 전에 함수, 변수, 클래스 또는 import의 **<Highlight>선언문</Highlight>을 해당 스코프의 맨 위로 이동**시키는 과정이다.
