--- a/post/2023/javascript_core.mdx
+++ b/post/2023/javascript_core.mdx
@@ -8,298 +8,245 @@ keywords: ["this", "scope", "context", "hoisting", "closure"]
 
 <MainCate tag="js">
 
-    <div className="main_category_box">
-        ## 실행 컨텍스트
+    <h2 id="main1">실행컨텍스트</h2>
 
-        <MarginBox>
-            실행 컨텍스트는 현재 실행되고 있는 코드 단위를 관리하는 범위다. 코드의 실행 순서, 변수의 범위,
-            this 바인딩 등을 결정합니다.
-        </MarginBox>
-    </div>
+    <MarginBox>
+        실행 컨텍스트는 현재 실행되고 있는 코드 단위를 관리하는 범위다. 코드의 실행 순서, 변수의 범위,this 바인딩 등을 결정합니다.
+    </MarginBox>
 
-    <SubCate>
-        <div className="sub_cate_box">
-            ### 실행 컨텍스트 구성
+    ### 실행 컨텍스트 구성
 
-            <div className="sub_contents">
-                <MarginBox lang="">
-                    1. #### Variable Object
+    1. #### Variable Object
 
-                        var로 선언된 변수와, 함수 선언식으로 선언된 함수를 위한 Environment Record를 제공.
+        var로 선언된 변수와, 함수 선언식으로 선언된 함수를 위한 Environment Record를 제공.
 
-                    2. #### Lexical Environment
+    2. #### Lexical Environment
 
-                        let, const로 선언된 변수와, 함수 표현식으로 선언된 함수를 위한 Environment Record를 제공.
+        let, const로 선언된 변수와, 함수 표현식으로 선언된 함수를 위한 Environment Record를 제공.
 
-                    3. #### This binding
+    3. #### This binding
 
-                        this 키워드의 값이 무엇인지 결정하는 역할.
-                </MarginBox>
-            </div>
-        </div>
-    </SubCate>
+        this 키워드의 값이 무엇인지 결정하는 역할.
 
-</MainCate>
+    <h2 id="main2">THIS</h2>
 
-<MainCate tag="js">
-    <div className="main_category_box">
-        ## THIS
+    <MarginBox >
+        자바스크립트에서 this는 현재 실행 컨텍스트에 따라 다르게 해석되는 특수한 키워드입니다. this는 실행 컨텍스트에 따라 바뀌게 되는데, 이 컨텍스트는 **함수가 어떻게 호출**되었는지에 달려있습니다.
+    </MarginBox>
 
-        <MarginBox lang="en">
-            자바스크립트에서 this는 현재 실행 컨텍스트에 따라 다르게 해석되는 특수한 키워드입니다. this는 실행 컨텍스트에 따라 바뀌게 되는데, 이 컨텍스트는 **함수가 어떻게 호출**되었는지에 달려있습니다.
-        </MarginBox>
-    </div>
+    ### 함수 호출 방식
 
-    <SubCate>
-        <div className="sub_cate_box">
-            ### 함수 호출 방식
-            <div className="sub_contents">
-                <MarginBox lang="">
-                    1. #### 일반적인 함수호출
-                        전역 컨텍스트나 함수 호출에서의 this는 전역객체를 가리킨다. 전역함수는 물론이고 심지어 내부함수의 경우도 this는 외부함수가 아닌 전역객체에 바인딩된다.
+    1. #### 일반적인 함수호출
+        전역 컨텍스트나 함수 호출에서의 this는 전역객체를 가리킨다. 전역함수는 물론이고 심지어 내부함수의 경우도 this는 외부함수가 아닌 전역객체에 바인딩된다.
 
-                        Browser-side에서는 window, Server-side(Node.js)에서는 global 객체를 의미한다.
+        Browser-side에서는 window, Server-side에서는 global 객체를 의미한다.
 
-                        <p className="code">**CODE**</p>
+        <p className="code">**CODE**</p>
 
-                        ```js
-                        console.log(this); //window
+        ```js
+        console.log(this); //window
 
-                        function choonSik() {
-                            console.log(this); //window
-                        }
+        function choonSik() {
+            console.log(this); //window
+        }
 
-                        choonSik();
-                        ```
+        choonSik();
+        ```
 
-                        **내부함수는 일반 함수, 메소드, 콜백함수 어디에서 선언되었든 관계없이 this는 전역객체를 바인딩한다.**
+        **내부함수는 일반 함수, 메소드, 콜백함수 어디에서 선언되었든 관계없이 this는 전역객체를 바인딩한다.**
 
-                    2. #### Method
-                        메소드 내부의 this는 해당 메소드를 소유한 객체, 즉 해당 메소드를 호출한 객체에 바인딩된다.
+    2. #### Method
 
-                        <p className="code">**CODE**</p>
+        메소드 내부의 this는 해당 메소드를 소유한 객체, 즉 해당 메소드를 호출한 객체에 바인딩된다.
 
+        <p className="code">**CODE**</p>
 
-                        ```js
-                        let obj = {
-                            name: "ppark",
-                            consoleName: function () {
-                                console.log(this.name); //ppark
-                            },
-                        };
 
-                        obj.consoleName();
-                        ```
+        ```js
+        let obj = {
+            name: "ppark",
+            consoleName: function () {
+                console.log(this.name); //ppark
+            },
+        };
 
-                    3. #### 생성자함수
+        obj.consoleName();
+        ```
 
-                        생성자 함수에서 this는 새로 생성되는 인스턴스 객체를 가리킵니다.
+    3. #### 생성자함수
 
-                        <p className="code">**CODE**</p>
+        생성자 함수에서 this는 새로 생성되는 인스턴스 객체를 가리킵니다.
 
-                        ```js
-                        function Job(job) {
-                            this.job = job;
-                            console.log(this.job); //police
-                        }
+        <p className="code">**CODE**</p>
 
-                        let police = new Job("police");
-                        ```
+        ```js
+        function Job(job) {
+            this.job = job;
+            console.log(this.job); //police
+        }
 
-                    4. #### Call / Apply / Bind Method
+        let police = new Job("police");
+        ```
 
-                        apply, call, bind 메소드를 사용하여 함수를 호출하면, **첫 번째 argument로 전달된 객체를 this로 사용**할 수 있습니다.
+    4. #### Call / Apply / Bind Method
 
-                        ##### Call
+        apply, call, bind 메소드를 사용하면, **첫 번째 argument로 전달된 객체를 this로 사용**할 수 있습니다.
 
-                        this를 특정 값으로 지정할 수 있다. 첫 번째 argument는 this로 사용할 객체고, 그 이후의 arguments는 함수에 전달됩니다.
+        ##### Call
 
-                        <p className="code">**CODE**</p>
+        this를 특정 값으로 지정할 수 있다. 첫 번째 argument는 this로 사용할 객체고, 그 이후의 arguments는 함수에 전달됩니다.
 
-                        ```js
-                        function thisIs(orange) {
-                            console.log(`This is ${orange} and ${this.apple}`);
-                            // This is orange and apple
-                        }
+        <p className="code">**CODE**</p>
 
-                        let fruit = { apple: "apple" };
+        ```js
+        function thisIs(orange) {
+            console.log(`This is ${orange} and ${this.apple}`);
+            // This is orange and apple
+        }
 
-                        thisIs.call(fruit, "orange");
-                        ```
+        let fruit = { apple: "apple" };
 
-                        ##### Apply method
+        thisIs.call(fruit, "orange");
+        ```
 
-                        apply 메소드는 call 메소드와 매우 유사하나, 함수에 argument를 배열을 전달한다는 점이 다르다.
+        ##### Apply method
 
-                        <p className="code">**CODE**</p>
+        apply 메소드는 call 메소드와 매우 유사하나, 함수에 argument를 배열을 전달한다는 점이 다르다.
 
-                        ```js
-                        function thisIs(orange, pear) {
-                            console.log(`This is ${orange}, ${pear} and ${this.apple}`);
-                            // This is orange,pear and apple
-                        }
+        <p className="code">**CODE**</p>
 
-                        let fruit = { apple: "apple" };
+        ```js
+        function thisIs(orange, pear) {
+            console.log(`This is ${orange}, ${pear} and ${this.apple}`);
+            // This is orange,pear and apple
+        }
 
-                        thisIs.apply(fruit, ["orange", "pear"]);
-                        ```
+        let fruit = { apple: "apple" };
 
-                        배열 길이만큼 parameter를 설정해줘야 하는 것 같다. 아래 코드를 보면 orange만 출력된다.
+        thisIs.apply(fruit, ["orange", "pear"]);
+        ```
 
-                        <p className="code">**CODE**</p>
+        배열 길이만큼 parameter를 설정해줘야 하는 것 같다. 아래 코드를 보면 orange만 출력된다.
 
-                        ```js
-                        function thisIs(orange) {
-                            console.log(`This is ${orange}and ${this.apple}`);
-                            // This is orange and apple
-                        }
+        <p className="code">**CODE**</p>
 
-                        let fruit = { apple: "apple" };
+        ```js
+        function thisIs(orange) {
+            console.log(`This is ${orange}and ${this.apple}`);
+            // This is orange and apple
+        }
 
-                        thisIs.apply(fruit, ["orange", "pear"]);
-                        ```
+        let fruit = { apple: "apple" };
 
-                        ##### Bind method
+        thisIs.apply(fruit, ["orange", "pear"]);
+        ```
 
-                        bind 메소드는 함수의 this값을 설정한 **새로운 함수를 반환**합니다. 이 새 함수를 호출하면 this값이 설정된 상태로 원래의 함수가 실행됩니다.
 
+        ##### Bind method
 
-                        새로운 함수가 생성되니까, 그 함수를 다시 호출해줘야 한다.
+        bind 메소드는 함수의 this값을 설정한 **새로운 함수를 반환**합니다. 이 새 함수를 호출하면 this값이 설정된 상태로 원래의 함수가 실행됩니다.
 
-                        <p className="code">**CODE**</p>
 
-                        ```js
-                        function thisIs() {
-                            console.log(`This is ${this.apple}`);
-                        }
+        새로운 함수가 생성되니까, 그 함수를 다시 호출해줘야 한다.
 
-                        let fruit = { apple: "apple" };
+        <p className="code">**CODE**</p>
 
-                        let bindingFruit = thisIs.bind(fruit);
+        ```js
+        function thisIs() {
+            console.log(`This is ${this.apple}`);
+        }
 
-                        bindingFruit(); //This is apple
-                        ```
+        let fruit = { apple: "apple" };
 
-                        이 함수를 어디에서, 어떻게 호출하든 **this값이 바뀌지 않는다.**
+        let bindingFruit = thisIs.bind(fruit);
 
-                        <p className="code">**CODE**</p>
+        bindingFruit(); //This is apple
+        ```
 
-                        ```js
-                        function thisIs() {
-                            console.log(`This is ${this.apple}`);
-                        }
+        이 함수를 어디에서, 어떻게 호출하든 **this값이 바뀌지 않는다.**
 
-                        let fruitOne = { apple: "apple" };
-                        let fruitTwo = { banana: "bananan" };
+        <p className="code">**CODE**</p>
 
-                        let bindingFruit = thisIs.bind(fruitOne);
-                        bindingFruit(); // This is apple
-                        bindingFruit.call(fruitTwo); // This is apple
-                        ```
-                </MarginBox>
-            </div>
-        </div>
-    </SubCate>
+        ```js
+        function thisIs() {
+            console.log(`This is ${this.apple}`);
+        }
 
-</MainCate>
+        let fruitOne = { apple: "apple" };
+        let fruitTwo = { banana: "bananan" };
 
-<MainCate tag="js">
-    <div className="main_category_box">
-        ## SCOPE
+        let bindingFruit = thisIs.bind(fruitOne);
+        bindingFruit(); // This is apple
+        bindingFruit.call(fruitTwo); // This is apple
+        ```
 
-        <MarginBox lang="en">
-            scope는 변수의 유효 범위를 나타내는 프로그래밍 개념이다.스코프에 따라 변수에 접근하거나 값을 변경할 수 있는 범위가 결정된다.
-        </MarginBox>
-    </div>
 
-    <SubCate>
-        <div className="sub_cate_box">
-            ### SCOPE TYPE
+    <h2 id="main3">SCOPE</h2>
 
-            <div className="sub_contents">
-                <MarginBox lang="en">
-                    1. #### Global scope
-                        전역 스코프는 코드의 어디에서든지 접근 가능한 변수의 범위를 의미한다.
+    <MarginBox>
+        scope는 변수의 유효 범위를 나타내는 프로그래밍 개념이다.스코프에 따라 변수에 접근하거나 값을 변경할 수 있는 범위가 결정된다.
+    </MarginBox>
 
-                    2. #### Local scope
-                        로컬 스코프는 코드 블록 내에서만 변수가 접근 가능한 범위를 의미한다. 이 범위는 함수 내부나 코드 블록{} 내부를 의미한다. 로컬 스코프에서 선언된 변수는 그 범위를 벗어나면 접근할 수 없으며, 메모리에서 해제됩니다.
+    ### SCOPE TYPE
 
-                        ##### 함수 레벨 스코프
-                            함수 레벨 스코프는 함수 내부에서 선언된 변수가 함수 내부에서만 유효하다는 것을 의미한다. 함수 범위를 벗어나면 해당 변수는 존재하지 않는다. JavaScript(ES6 이전)와 PHP 등이 이에 해당된다.
+    1. #### Global scope
+        전역 스코프는 코드의 어디에서든지 접근 가능한 변수의 범위를 의미한다.
 
-                        ##### 블락 레벨 스코프
-                             중괄호{}로 둘러싸인 영역에 선언된 변수가 영역 내에서만 유효하다는 것을 의미한다. C, Java, Python, JavaScript(let, const 키워드) 등이 이에 해당된다.
+    2. #### Local scope
+        로컬 스코프는 코드 블록 내에서만 변수가 접근 가능한 범위를 의미한다. 이 범위는 함수 내부나 코드 블록{} 내부를 의미한다. 로컬 스코프에서 선언된 변수는 그 범위를 벗어나면 접근할 수 없으며, 메모리에서 해제됩니다.
 
-                            <HighlightBox>
-                                ### ☁️ 로컬 스코프
+        ##### 함수 레벨 스코프
+        함수 레벨 스코프는 함수 내부에서 선언된 변수가 함수 내부에서만 유효하다는 것을 의미한다. 함수 범위를 벗어나면 해당 변수는 존재하지 않는다. JavaScript(ES6 이전)와 PHP 등이 이에 해당된다.
 
-                                로컬스코프가 함수 레벨 스코프와 블락 레벨 스코프로 나뉜다고 생각해서 일단 위 방식대로 정리했다.
-                            </HighlightBox>
+        ##### 블락 레벨 스코프
+        중괄호{}로 둘러싸인 영역에 선언된 변수가 영역 내에서만 유효하다는 것을 의미한다. C, Java, Python, JavaScript(let, const 키워드) 등이 이에 해당된다.
 
-                    3. #### Lexical scope
-                        변수가 **선언된 위치**에 의해 그 범위가 결정되고, 자바스크립트는 렉시컬 스코프를 따른다.
+        <HighlightBox>
+            ### ☁️ 로컬 스코프
 
-                        <p className="code">**CODE**</p>
-                            ```js
-                            let y = 5; // global
+            로컬스코프가 함수 레벨 스코프와 블락 레벨 스코프로 나뉜다고 생각해서 일단 위 방식대로 정리했다.
+        </HighlightBox>
 
-                            function alpha() {
-                                let y = 10;
-                                console.log(y); // 10
-                                beta();
-                            }
+    3. #### Lexical scope
+        변수가 **선언된 위치**에 의해 그 범위가 결정되고, 자바스크립트는 렉시컬 스코프를 따른다.
 
-                            function beta() {
-                                console.log(y); // 5
-                            }
+        <p className="code">**CODE**</p>
+            ```js
+            let y = 5; // global
 
-                            alpha();
-                            ```
+            function alpha() {
+                let y = 10;
+                console.log(y); // 10
+                beta();
+            }
 
-                        <HighlightBox>
-                            ### ☁️ 렉시컬 스코프
+            function beta() {
+                console.log(y); // 5
+            }
 
-                            어디에 선언되냐에 따라 달라진다고 했지만
-                            렉시컬 스코프도 함수 레벨 스코프 기준으로 구분되는거 아닐까?라는 생각을 해본다.
+            alpha();
+            ```
 
-                            위 코드 기준 beta함수가 스코프 때문에 alpha함수 y변수에 접근을 할 수가 없다.
+    <HighlightBox>
+    ### ☁️ 선언 위치
+    '선언 위치'라고 해서 '자꾸 작성한 코드 위'라는 잘못된 생각을 한다.
+    함수 내부에서 함수를 호출해도 호출된 함수가 전역에 있다면, 함수 내부변수를 참조하지 않고, 전역에 있는 변수를 참조한다. 그러니까 함수가 호출되면 "어디에 선언되어있는지"는 함수안에 있는 함수인가? 전역에 작성된 함수인가? 이래서 선언된 위치를 확인해야한다.
+    </HighlightBox>
 
-                            "선언된 위치"라고 해서 "자꾸 작성한 코드 위"이라는 잘못된 생각을 한다.
-                            함수 내부에서 함수를 호출해도 호출된 함수가 전역에 있다면, 함수 내부변수를 참조하지 않고, 전역에 있는 변수를 참조한다. 그러니까 함수가 호출되면 "어디에 선언되어있는지"는 함수안에 있는 함수인가? 전역에 작성된 함수인가? 이래서 선언된 위치를 확인해야한다.
-                        </HighlightBox>
-                </MarginBox>
-            </div>
-        </div>
-    </SubCate>
+    <h2 id="main4">HOISTING</h2>
 
-</MainCate>
+        인터프리터가 코드를 실행하기 전에 함수, 변수, 클래스 또는 import의 **선언문을 해당 스코프의 맨 위로 이동**시키는 과정이다.
 
-<MainCate tag="js">
+        <HighlightBox>
+            ### ⚡️ 선언문
 
-    <div className="main_category_box">
-        ## <TextSizeDown>HOISTING</TextSizeDown>
+            식별자를 선언하는 구문
+        </HighlightBox>
 
-        <MarginBox lang="en">
-            인터프리터가 코드를 실행하기 전에 함수, 변수, 클래스 또는 import의 **<Highlight>선언문</Highlight>을 해당 스코프의 맨 위로 이동**시키는 과정이다.
+    <h2 id="main5">CLOSURE</h2>
 
-
-            <HighlightBox>
-                ### ⚡️ 선언문
-
-                식별자를 선언하는 구문
-            </HighlightBox>
-        </MarginBox>
-
-    </div>
-
-</MainCate>
-
-<MainCate tag="js">
-  <div className="main_category_box">
-    ## <TextSizeDown>CLOSURE</TextSizeDown>
-
-    <MarginBox lang="en">
-        클로저는 **내부 함수가 외부 함수의 스코프에 접근**할 수 있는 것을 말한다.클로저는 함수가 생성될 때의 환경을 **기억**하고, 이 환경을 나중에도 사용할 수 있다.
+    <MarginBox>
+    클로저는 **내부 함수가 외부 함수의 스코프에 접근**할 수 있는 것을 말한다.클로저는 함수가 생성될 때의 환경을 **기억**하고, 이 환경을 나중에도 사용할 수 있다.
 
         클로저를 활용하면 프라이빗 변수를 사용할 수 있다. 다른 코드에서 직접적으로 변경할 수 없는 변수를 만들 수 있다는 것을 의미합니다.
 
@@ -320,16 +267,16 @@ keywords: ["this", "scope", "context", "hoisting", "closure"]
         ```
 
         <HighlightBox>
-            ### ☁️ 헷갈릴까봐
+            ### ☁️ 생각정리
 
             add5는 makeAdder함수를 호출해서 x인자 값으로 5를 받고, 리턴값으로 함수를 add5 변수에 저장한다.
-
             그러고 add5를 실행하면 리턴받은 함수을 실행한다. 그래서 y의 값에 2가 들어가는거다.
 
-            나는 makeAdder함수를 변수에 저장하면 x인자 값을 받는 함수 자체를 저장한다고 생각했다. 그래서 y의 값이 어떻게 할당되는거지 헷갈렸다. <TextSizeDown>
-            기본이 부족하다ㅠ.</TextSizeDown>
+            나는 makeAdder함수를 변수에 저장하면 x인자 값을 받는 함수 자체를 저장한다고 생각했다. 그래서 y의 값이 어떻게 할당되는거지 헷갈렸다.
+
+            기본이 부족하다ㅠ
         </HighlightBox>
+
     </MarginBox>
 
-  </div>
 </MainCate>
