--- a/post/2023/javascript_core.mdx
+++ b/post/2023/javascript_core.mdx
@@ -8,7 +8,7 @@ keywords: ["this", "scope", "context", "hoisting", "closure"]
 
 <MainCate tag="js">
 
-    <h2 id="main1">실행컨텍스트</h2>
+    <h2 id="section_1">실행컨텍스트</h2>
 
     <MarginBox>
         실행 컨텍스트는 현재 실행되고 있는 코드 단위를 관리하는 범위다. 코드의 실행 순서, 변수의 범위,this 바인딩 등을 결정합니다.
@@ -28,7 +28,7 @@ keywords: ["this", "scope", "context", "hoisting", "closure"]
 
         this 키워드의 값이 무엇인지 결정하는 역할.
 
-    <h2 id="main2">THIS</h2>
+    <h2 id="section_2">THIS</h2>
 
     <MarginBox >
         자바스크립트에서 this는 현재 실행 컨텍스트에 따라 다르게 해석되는 특수한 키워드입니다. this는 실행 컨텍스트에 따라 바뀌게 되는데, 이 컨텍스트는 **함수가 어떻게 호출**되었는지에 달려있습니다.
@@ -181,7 +181,7 @@ keywords: ["this", "scope", "context", "hoisting", "closure"]
         ```
 
 
-    <h2 id="main3">SCOPE</h2>
+    <h2 id="section_3">SCOPE</h2>
 
     <MarginBox>
         scope는 변수의 유효 범위를 나타내는 프로그래밍 개념이다.스코프에 따라 변수에 접근하거나 값을 변경할 수 있는 범위가 결정된다.
@@ -233,7 +233,7 @@ keywords: ["this", "scope", "context", "hoisting", "closure"]
     함수 내부에서 함수를 호출해도 호출된 함수가 전역에 있다면, 함수 내부변수를 참조하지 않고, 전역에 있는 변수를 참조한다. 그러니까 함수가 호출되면 "어디에 선언되어있는지"는 함수안에 있는 함수인가? 전역에 작성된 함수인가? 이래서 선언된 위치를 확인해야한다.
     </HighlightBox>
 
-    <h2 id="main4">HOISTING</h2>
+    <h2 id="section_4">HOISTING</h2>
 
         인터프리터가 코드를 실행하기 전에 함수, 변수, 클래스 또는 import의 **선언문을 해당 스코프의 맨 위로 이동**시키는 과정이다.
 
@@ -243,7 +243,7 @@ keywords: ["this", "scope", "context", "hoisting", "closure"]
             식별자를 선언하는 구문
         </HighlightBox>
 
-    <h2 id="main5">CLOSURE</h2>
+    <h2 id="section_5">CLOSURE</h2>
 
     <MarginBox>
     클로저는 **내부 함수가 외부 함수의 스코프에 접근**할 수 있는 것을 말한다.클로저는 함수가 생성될 때의 환경을 **기억**하고, 이 환경을 나중에도 사용할 수 있다.
