--- a/post/2024/portfolio_insight.mdx
+++ b/post/2024/portfolio_insight.mdx
@@ -1,8 +1,8 @@
 ---
-title: "포트폴리오 인사이트"
-summary: "포트폴리오 사이트 만들면서 배우고 느낀점"
-date: "2024-02-17"
-tag: "project"
+title: "포트폴리오 인사이트",
+summary: "포트폴리오 사이트 만들면서 배우고 느낀점",
+date: "2024-02-17",
+tag: "project",
 keyword: []
 ---
 
