--- a/post/2024/portfolio_insight.mdx
+++ b/post/2024/portfolio_insight.mdx
@@ -6,7 +6,7 @@ tag: project
 keyword: []
 ---
 
-<Wrapper tag="project">
+<Wrapper>
     
     <CustomBox margin="10px auto" maxWidth="653px">
         포트폴리오 웹사이트 만들면서 배운 것과 진행하면서  포스팅 해본다.
